# pyscript-to-package

./: README.org  pyproject.toml
src/pyscript_to_package/: __init__.py  main.py
