[project]
name = "pyscript-to-package"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "tomlkit>=0.14.0",
]

[project.readme]
file = "README.org"
content-type = "text/org"

[project.scripts]
pyscript-to-package = "pyscript_to_package.main:migrate"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
